--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div id='result'>
             <p id='res'>Congratulations！You win!</p>
-            <div id='again' onclick="obj.getStart()">New Game</div>
+            <button id='again' onclick="obj.getStart()">New Game</button>
         </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
